= RubyMotion 2.33 =

  * Improved Enumerable#inject performance. ~40% times faster.
  * [OSX] Fixed a bug that made it impossible to use a `NSApplication' subclass.
  * [OSX] Fixed a bug where it would trigger a crash when it will evaluates a
    expression on REPL on Yosemite.
  * [OSX] Fixed a bug where the build directory for 3rd-party library wouldn't
    be removed with `rake clean' command.
  * Fixed a bug where Method#owner will return incorrect owner if the method 
    in inherited class would be overrided.

= RubyMotion 2.32 =

  * The iOS 8.0 and OS X 10.10 versions of the runtime have been recompiled
    with Xcode 6 Beta 6.
  * [iOS] Depracted rake options `device_family' and `retina' in favor of
    `device_name' which takes the name of one of the configured device-sets
    found in Xcode -> Window -> Devices or the `simctl' tool (its location can
    be found in the message shown when using one of the deprecated options).
  * [iOS] Added support for iOS 8 App Extensions. See the `motion create --help'
    output for a list of available templates and configure your host application
    with the following: `app.target("path/to/extension", :extension)'.
  * [iOS] Added support for frameworks that allow you to share code between your
    host application and its extensions. Use the `ios-framework' template for
    `motion create' and configure your host application with the following:
    `app.target("path/to/framework", :framework)'.
  * [iOS] Fixed a bug where backtraces could not be symbolicated on the iOS 8
    Simulator.
  * [iOS] Fixed a bug where the iOS 8 Simulator could not be launched with the
    default device config.
  * [iOS] Fixed a bug where the iOS 8 Simulator could not be used to select
    views in the REPL.
  * [iOS] Fixed a bug where the REPL view selection would incorrectly invert the
    coordinates for the landscape orientation on iOS 8.
  * [iOS] Fixed a bug where "xcodebuild: error:" message would be displayed